# solana-bootcamp

./: .gitignore
project-1-favorites/: Anchor.toml
project-1-favorites/programs/favorites/src/: lib.rs
project-2-voting-app/: .gitignore  package.json
project-2-voting-app/anchor/: Anchor.toml
project-2-voting-app/anchor/tests/: voting.spec.ts
project-3-voting-app/: package.json
project-3-voting-app/anchor/: .gitignore  Cargo.toml
project-3-voting-app/anchor/programs/voting/src/: lib.rs
project-3-voting-app/anchor/tests/: voting.spec.ts
project-3-voting-app/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-39900-Ac5g8UUXC3ioftsKHfQ3eJqauEhxk8GRJkbJxpTkDAQ1.tar.zst  snapshot-40000-HeL4xJ8FYPyS1LZSwXE8pJKgRXjsgyrTZ1GR9BQwvmhh.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
project-3-voting-app/test-ledger/accounts/run/: 0.3  12453.135  14155.154  38696.404  38750.411  38751.410  39800.421  40000.423  4488.49  5103.57  5888.65  8560.94
project-4-crud-app/anchor/: Anchor.toml
project-4-crud-app/anchor/src/: crudapp-exports.ts
project-4-crud-app/src/components/crudapp/: crudapp-data-access.tsx  crudapp-ui.tsx
project-5-tokens/: bosM5c4pBbbtUuTdKSTow1EB5Vjn1iedGbx1uzsgC1j.json  metadata.json  mntojqbkJ6VgzYnWfyKTTWKWz5NosYZAPdtYpnLpbHY.json
project-6-nfts/: bosM5c4pBbbtUuTdKSTow1EB5Vjn1iedGbx1uzsgC1j.json  create-collection.ts  create-nft.ts  package.json  verify-nft.ts
project-7-swap/: Anchor.toml  package.json
project-7-swap/programs/swap/: Cargo.toml
project-7-swap/tests/: swap.ts
(+14 files in other folders)
